feat(todo) - extract toFormSubmit

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -8,7 +8,7 @@
   @for (todo of store.todos(); track todo.id) {
   <li>{{ todo.title }}</li>
   } @empty {
-  <li>No Todos!</li>
+  <li>No Todos found!</li>
   }
 </ul>
 
