feat(example) - move logic for disabling the submit button to the component

--- a/src/app/example/example.component.html
+++ b/src/app/example/example.component.html
@@ -3,7 +3,7 @@
     >Title
     <input type="text" formControlName="title" />
   </label>
-  <button type="submit" [disabled]="!form.valid || busy()">submit</button>
+  <button type="submit" [disabled]="submitDisabled()">submit</button>
   @if (busy()) {
   <div>submitting...</div>
   } @if (error()) {
